Added submit button to pizza order page

--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,5 +1,5 @@
 <h1>Order a pizza!</h1>
-<form>
+<form method="POST" action="{% url 'order' %}">
     {% csrf_token %}
     <label for="topping1">Topping 1: </label>
     <input id="topping1" type="text" name="topping1">
@@ -11,4 +11,5 @@
         <option value="Medium">Medium</option>
         <option value="Large">Large</option>
     </select>
+    <input type="submit" value="Order Pizza">
 </form>
