--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,15 +1,6 @@
 <h1>Order a pizza!</h1>
 <form method="POST" action="{% url 'order' %}">
     {% csrf_token %}
-    <label for="topping1">Topping 1: </label>
-    <input id="topping1" type="text" name="topping1">
-    <label for="topping2">Topping 2: </label>
-    <input id="topping2" type="text" name="topping2">
-    <label for="size">Size: </label>
-    <select id="size" name="size">
-        <option value="Small">Small</option>
-        <option value="Medium">Medium</option>
-        <option value="Large">Large</option>
-    </select>
+    {{ pizzaForm }}
     <input type="submit" value="Order Pizza">
 </form>
