Handle post data in order pizza view

--- a/pizza/templates/pizza/order.html
+++ b/pizza/templates/pizza/order.html
@@ -1,4 +1,6 @@
 <h1>Order a pizza!</h1>
+
+<h2>{{note}}</h2>
 <form method="POST" action="{% url 'order' %}">
     {% csrf_token %}
     {{ pizzaForm }}
